--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/tiagosito/Library/Android/sdk
-flutter.sdk=/Users/tiagosito/flutter
+sdk.dir=/home/genius-obed/Android/Sdk
+flutter.sdk=/home/genius-obed/fvm/versions/3.13.0
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
